# faith-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  runtests.ps1  setup.ps1  setup.sh  webtest.py
.agents/: FRS-Multi-Agent-AI-Framework.md  dependency-graph.md  epic.yaml  generate-dependency-graph.bat  generate-dependency-graph.ps1  generate-dependency-graph.sh  generate_dependency_graph.py
.agents/policies/: coding-style.md  frontend-risk-rules.md  planning-rules.md  versioning-rules.md  workflow-rules.md
.agents/tasks/: FAITH-001-project-directory-structure.md  (+126 more)
config/: .env.template
data/: provider-privacy.json
faith/: __init__.py
faith_cli/: cli.py  docker.py  paths.py
scripts/: live_web_chat_diagnostic.py
tests/: __init__.py  conftest.py  test_agent_panel_runtime.js  test_agent_runtime.py  test_agent_tool_manifest.py  test_approval_engine.py  test_approval_flow.py  test_approval_panel_contract.py  test_approval_panel_runtime.js  test_audit_log.py  test_audit_tool_artifacts.py  test_cag.py  test_code_index.py  test_config_hot_reload.py  test_config_loader.py  test_config_migration.py  test_container_manager.py  test_context_compaction.py  test_context_summariser.py  test_docker_runtime_panel_contract.py  test_effective_context_panel_contract.py  test_effective_context_panel_runtime.js  test_event_log.py  test_event_subscriber.py  test_event_system.py  test_external_mcp.py  test_faith_cli.py  test_file_storage.py  test_filesystem_history.py  test_filesystem_server.py  test_filesystem_tools.py  test_frs_manager.py  test_fulltext_search.py  test_input_panel_contract.py  test_input_panel_runtime.js  test_kv_store.py  test_layout.html  test_layout_runtime.js  test_layout_runtime.py  test_live_web_chat.py  (+39 more)
web/: build-faith-ui.mjs
web/js/: app.js  (+2 more)
(+225 files in other folders)
