[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faith-cli"
version = "0.1.0"
description = "Framework AI Team Hive"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
  { name = "FAITH Contributors" }
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1.6",
  "pre-commit>=4.5.1",
  "pydantic>=2.0,<3.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "redis>=5.0,<6.0",
  "requests>=2.31",
  "ruff>=0.15.8",
  "uvicorn[standard]>=0.29,<1.0",
  "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = [
  "jinja2>=3.1",
  "pre-commit>=4.0",
  "pytest>=9.0",
  "pytest-asyncio>=1.0",
  "ruff>=0.11",
]

[project.scripts]
faith = "faith_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
faith_cli = [
  "resources/docker-compose.yml",
  "resources/config/.env.template",
  "resources/config/secrets.yaml.template",
  "resources/config/archetypes/*.yaml",
  "resources/data/*.json",
  "resources/.gitignore",
]
faith_web = [
  "templates/*.html",
]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["faith_cli*", "faith_pa*", "faith_web*", "faith_shared*", "faith_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".git",
  ".pytest_cache",
  "faith_cli.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

